Fix horizontal scrolling (#3723)
* Fix horizontal scrolling

* Fixed width of command bar

* Update CommandBar.js

* Add vertical css class

--- a/src/components/SecondaryPanes/CommandBar.css
+++ b/src/components/SecondaryPanes/CommandBar.css
@@ -10,6 +10,10 @@
   background-color: var(--theme-body-background);
 }
 
+.command-bar.vertical {
+  width: 100vw;
+}
+
 html[dir="rtl"] .command-bar {
   border-right: 1px solid var(--theme-splitter-color);
 }
